nav wrap fix page-nb group

--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,6 @@ nav .nb-gen {
 nav .nb-page {
     letter-spacing: 1.4px;
     color: var(--gray);
-    flex-shrink: 0;
 }
 nav .title {
     letter-spacing: 1.2px;
@@ -171,6 +170,10 @@ nav .title {
     padding-right: 1.75em;
 }
 
+nav > :last-child,
+nav > :last-child > * {
+    flex-shrink: 0;
+}
 nav::after {
     content: "";
     position: absolute;
